--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -45,7 +45,7 @@
                                     <div class="float-rt joincls" ng-if="member">
                                         <a ng-click="test()" ng-hide="joined" class="outlined-btn red-btn v-a-m">Join Class</a>
                                         <a ng-click="close()" ng-show="joined" class="outlined-btn red-btn v-a-m">Leave Class</a>
-                                        <a ng-click="toggleActiveFrame()" class="user-chat v-a-m"><img src="img/user-chat.jpg" alt="user chat" /></a>
+ <!--                                        <a ng-click="toggleActiveFrame()" class="user-chat v-a-m"><img src="img/user-chat.jpg" alt="user chat" /></a> -->
                                     </div>
                                     <div class="float-rit joincls" ng-if="!member">
                                         <a ng-click="addStudent(user.id)" class="outlined-btn red-btn v-a-m">Purchase Class</a>
