--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -69,37 +69,37 @@
                     <div class="row">
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" checked="" ng-model="interests['math']">
+                                <input type="checkbox" checked="" ng-model="interests['Math']">
                                 <i></i> Mathematics
                             </label>
                         </div>
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" checked="" ng-model="interests['science']">
+                                <input type="checkbox" checked="" ng-model="interests['Science']">
                                 <i></i> Science
                             </label>
                         </div>
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" ng-model="exam">
+                                <input type="checkbox" ng-model="interests['Exam Prep']">
                                 <i></i> Exam Prep
                             </label>
                         </div>
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" ng-model="tutoring">
+                                <input type="checkbox" ng-model="interests['Tutoring']">
                                 <i></i> Tutoring
                             </label>
                         </div>
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" checked="" ng-model="languages">
+                                <input type="checkbox" checked="" ng-model="interests['Languages']">
                                 <i></i> Languages
                             </label>
                         </div>
                         <div class="col-sm-6 checkbox">
                             <label class="i-checks">
-                                <input type="checkbox" ng-model="technology">
+                                <input type="checkbox" ng-model="interests['Technology']">
                                 <i></i> Technology
                             </label>
                         </div>
