--- a/browser/js/common/modals/payments/payments.html
+++ b/browser/js/common/modals/payments/payments.html
@@ -1,18 +1,29 @@
-<form ng-submit="createPayout()">
-<div id="loginmodal" class=" loginmodal">
+<form ng-submit="createPayout()" class="form-horizontal">
+<div id="loginmodal" class="paypalinfo">
     <div class="modal-header">
         <button type="button" class="close" ng-click="close(false)" aria-hidden="true">&times;</button>
         <h4 class="modal-title">Paypal Info</h4>
-        <h4 class="erorr" ng-show="response">{{response}}</h4>
-        <span class="login-instruction">Please Enter Your Paypal Information</span>
     </div>
     <div class="modal-body" ng-if="!response">
-            <input type="text" name="login" class="login-signup" ng-model="paypal.email" placeholder="Email" required/>
-            <input type="number" name="login" class="login-signup" ng-model="paypal.amount" placeholder="Amount" required/>
+        <h4 class="erorr" ng-show="response">{{response}}</h4>
+         <span class="pay-instruction">Please Enter Your Paypal Information</span>
+         <div class="form-group">
+                <label class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="text" name="login" class="form-control" ng-model="paypal.email" placeholder="Email" required/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Amount</label>
+                <div class="col-sm-10">
+                    <input type="number" name="login" class="form-control" ng-model="paypal.amount" placeholder="Amount" required/>
+                </div>
+            </div>           
+            
     </div>
     <div class="modal-footer">
-        <input ng-if="!response" type="submit" name="submit" class="btn" value="Submit" style="width: 100%" />
-        <input ng-if="response" type="button" class="btn" value="Close" ng-click="close()" style="width:100%"/>
+        <input ng-if="!response" type="submit" name="submit" class="fill-btn float-rt add-payroll" value="Submit"/>
+        <input ng-if="response" type="button" class="btn" value="Close" ng-click="close()"/>
     </div>
 </div>  
 </form>
