--- a/browser/js/authorized/forums/forums.html
+++ b/browser/js/authorized/forums/forums.html
@@ -32,7 +32,7 @@
                                             </span>
                                             <span class="activity-title">{{forum.name}}<br>
                                             </span>
-                                            <a ng-click="transition(forum.id)" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
+                                            <a ng-click="transition(forum.id)" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> View Threads</a>
                                         </li>
                                         
                                     </ul>
