--- a/browser/js/authorized/forums/threadList/thread/thread.html
+++ b/browser/js/authorized/forums/threadList/thread/thread.html
@@ -27,7 +27,7 @@
                         <div class="panel-heading pos-rlt pad-20" >
                             <span class="username-wro">{{comment.comment_author}}</span> <span class="light-text">| {{comment.createdAt | date:'longDate'}}</span>
                             <br>
-                            <span class="message-text">{{comment.content}}</span>
+                            <span class="message-text text-overflow">{{comment.content}}</span>
                         </div>
                     </div>
                 </div>
