--- a/browser/js/authorized/profile/credentials/credentials.html
+++ b/browser/js/authorized/profile/credentials/credentials.html
@@ -1,5 +1,31 @@
 <div class="tab-pane" id="tab-3" ng-if="teacher">
     <div class="wrapper-md">
-        Credentials
+        <div class="col-lg-12 support-col">
+            <!--notes-->
+            <div>
+                <div class="secondery-title">
+                    Your Credentials
+                </div>
+                <div class="clearfix">
+                    <hr class="bold-hr">
+                </div>
+                <div class="outlined m-t-10 pad-20">
+                    <ul class="notes-list">
+                        <li ng-repeat="credential in credentials track by $index">
+                            <a ng-href="https://edvancesstorage.blob.core.windows.net/credentials/{{user.id + '-' + credential.name}}" download="{{credential.name}}" target="_self">
+                                <span class="notes-text">
+                        <span class="reltd-title reltitle">{{credential.name}}</span>
+                                </span>
+                            </a>
+                            <br>
+                            <span class="light-text">{{credential.createdAt | date:'longDate'}}</span>
+                            </span>
+                            <a ng-click="removeCredential(credential.id,$index)" class="btn btn-sm">Delete File</a>
+                        </li>
+                    </ul>
+                    <button class="fill-btn" ng-if="!submitting" type="file" ngf-select="addCredential($file)" accept="*" ngf-max-height="1000" ngf-max-size="10MB"><i class="fa fa-upload" aria-hidden="true"></i> Add Credential</button>
+                    <button ng-if="submitting"><img src="img/spinner.gif" /></button>
+                </div>
+            </div>
     </div>
 </div>
