--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -103,6 +103,18 @@
                                 <i></i> Technology
                             </label>
                         </div>
+                        <div class="col-sm-6 checkbox">
+                            <label class="i-checks">
+                                <input type="checkbox" ng-model="interests['History']">
+                                <i></i> History
+                            </label>
+                        </div>
+                        <div class="col-sm-6 checkbox">
+                            <label class="i-checks">
+                                <input type="checkbox" ng-model="interests['Literature']">
+                                <i></i> Literature
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
