--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -140,11 +140,11 @@
       <span class="font-bold">Reports</span>
     </a>
     <ul class="nav nav-sub dk">
-      <li ui-sref-active="active-sref">
+<!--       <li ui-sref-active="active-sref">
         <a ui-sref="earnings">
           <span>Earnings</span>
         </a>
-      </li>
+      </li> -->
       <li ui-sref-active="active-sref">
         <a ui-sref="transactions">
           <span>Transactions</span>
