--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -37,7 +37,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Course Icon</label>
                                                     <div class="col-sm-8">
-                                                        <div class="user-thumb"><img ng-if="!classThumbnail" src="https://edvances.blob.core.windows.net/class-thumbnails/classroom-placeholder.png" /><img ng-if="classThumbnail" ngf-thumbnail="classThumbnail" /></div>
+                                                        <div class="user-thumb"><img ng-if="!classThumbnail" src="https://edvancesstorage.blob.core.windows.net/class-thumbnails/classroom-placeholder.png" /><img ng-if="classThumbnail" ngf-thumbnail="classThumbnail" /></div>
                                                         <button type="file" ngf-select="changeClassroomImage($file)" ng-model="classThumbnail" accept="image/*" ng-f-max-height="1000" ngf-max-size="2mb" class="change-pro slim-btn outlined-btn gray-btn float-rt">Change</button>
                                                     </div>
                                                 </div>
