--- a/browser/js/common/modals/editClassroom/editClassroom.html
+++ b/browser/js/common/modals/editClassroom/editClassroom.html
@@ -22,47 +22,23 @@
         </div>
         <div class="form-group">
             <div class="row">
-                <label class="col-sm-3 control-label">Start Date</label>
-                <div class="col-sm-8">
-                    <input type="date" class="form-control" ng-model="temp_classroom.startDate" required/>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="row">
-                <lable class="col-sm-3 control-label">End Date</lable>
-                <div class="col-sm-8">
-                    <input type="date" class="form-control" ng-model="temp_classroom.endDate" required/>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="row">
-                <lable class="col-sm-3 control-label">Cost</lable>
-                <div class="col-sm-8">
-                    <input type="integer" class="form-control" ng-model="temp_classroom.cost" required/>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="row">
                 <label class="col-sm-3 control-label">Course Days </label>
                 <div class="col-sm-8">
                     <div class="weekDays-selector">
                         <input type="checkbox" id="weekday-mon" ng-model="days[0]" class="weekday" />
-                        <label for="weekday-mon">MO</label>
+                        <label for="weekday-mon">M</label>
                         <input type="checkbox" id="weekday-tue" ng-model="days[1]" class="weekday" />
-                        <label for="weekday-tue">TU</label>
+                        <label for="weekday-tue">T</label>
                         <input type="checkbox" id="weekday-wed" ng-model="days[2]" class="weekday" />
-                        <label for="weekday-wed">WE</label>
+                        <label for="weekday-wed">W</label>
                         <input type="checkbox" id="weekday-thu" ng-model="days[3]" class="weekday" />
-                        <label for="weekday-thu">TH</label>
+                        <label for="weekday-thu">Th</label>
                         <input type="checkbox" id="weekday-fri" ng-model="days[4]" class="weekday" />
-                        <label for="weekday-fri">FR</label>
+                        <label for="weekday-fri">F</label>
                         <input type="checkbox" id="weekday-sat" ng-model="days[5]" class="weekday" />
-                        <label for="weekday-sat">SA</label>
+                        <label for="weekday-sat">S</label>
                         <input type="checkbox" id="weekday-sun" ng-model="days[6]" class="weekday" />
-                        <label for="weekday-sun">SU</label>
+                        <label for="weekday-sun">Su</label>
                     </div>
                 </div>
             </div>
